<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Hình nền -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        android:contentDescription="@string/reset_password_screen" />

    <!-- Nội dung -->
    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#B3FFFFFF">

        <!-- Tiêu đề -->
        <TextView
            android:text="@string/reset_password_email_prompt"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- Nhập Email -->
        <EditText
            android:id="@+id/edtForgotEmail"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"/>

        <!-- Gửi liên kết đặt lại mật khẩu -->
        <Button
            android:id="@+id/btnResetPassword"
            android:text="@string/send_reset_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:layout_marginBottom="12dp"/>

        <!-- Quay lại -->
        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />
    </LinearLayout>
</FrameLayout>
